# EscrowEye

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  e2e-testplan.md  live-e2e.md  testnet_plan.md
backend/: .pre-commit-config.yaml  Dockerfile.prod  Makefile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/agent/: graph.py  prompts.py  service.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: a0f54c66ffa8_initial_models.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: ai_validation.py  audit.py  auth.py  earnings.py  escrow.py  homes.py  jobs.py  proof.py  x402.py  (+3 more)
backend/app/core/: config.py  logging.py
backend/app/domain/: __init__.py  enums.py
backend/app/infrastructure/: __init__.py  database.py  hcs_service.py  ipfs_service.py  models.py  x402_service.py
backend/app/repositories/: __init__.py  home_repository.py
backend/app/services/: __init__.py  _base.py  auth_service.py  demo_seed.py  dev_mode.py  escrow.py  hcs.py  hedera_client.py  home_service.py  job_service.py  marketplace.py  proof_service.py  signature_verifier.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_prompts.py  test_agent_tools.py  test_auth_signature_verification.py  test_e2e_wallet_marketplace.py  test_hedera.py  test_hedera_testnet.py  test_infrastructure.py  test_integration.py  test_ipfs_integration.py  test_marketplace_api.py  test_messages.py  test_photos.py  test_production_integrations.py
(+35 files in other folders)
