[project]
name = "escroweye"
version = "0.1.0"
description = "EscrowEye backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL"]
ignore = ["B008", "PLR2004", "PLR0913", "PLW0603", "N802"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR"]  # allow assert-driven patterns in tests
"app/infrastructure/models.py" = ["N815"]  # mixed-case column names from DB schema

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end backend flows that exercise real user journeys",
]
filterwarnings = [
    "ignore::DeprecationWarning:pythonjsonlogger.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
